force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <description>Account object for NIS2</description>
    <label>Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>NIS2_Entity</fullName>
        <active>true</active>
        <label>Ente NIS2</label>
        <layout>Account-NIS2 Entity Layout</layout>
    </recordTypes>
</CustomObject>