force-app/main/default/objects/Account/fields/ACN_Last_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>ACN_Last_Confirmation_Date__c</fullName>
    <label>Ultima conferma ACN</label>
    <type>Date</type>
</CustomField>