force-app/main/default/objects/Account/fields/ACN_Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ACN_Next_Due_Date__c</fullName>
    <label>Prossima scadenza ACN</label>
    <type>Date</type>
</CustomField>