force-app/main/default/objects/Account/fields/ACN_Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>ACN_Qualification_Status__c</fullName>
    <label>Stato qualifica ACN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>InReview</fullName>
            </value>
            <value>
                <fullName>InScope</fullName>
            </value>
            <value>
                <fullName>OutOfScope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>