force-app/main/default/objects/Account/fields/CSIRT_Lead_User__c.field-meta.xml
<CustomField>
    <fullName>CSIRT_Lead_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente CSIRT (Utente)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Referente CSIRT</relationshipLabel>
    <relationshipName>CSIRT_Lead_User</relationshipName>
    <type>Lookup</type>
</CustomField>