force-app/main/default/objects/Account/fields/Deputy_CSIRT_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deputy_CSIRT_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vice CSIRT (Contatto)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vice CSIRT</relationshipLabel>
    <relationshipName>Deputy_CSIRT_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>