force-app/main/default/objects/Account/fields/Deputy_PoC_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deputy_PoC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vice PoC (Contatto)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vice PoC</relationshipLabel>
    <relationshipName>Deputy_PoC_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>