force-app/main/default/objects/Account/fields/NIS2_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Assessment_Status__c</fullName>
    <label>Stato valutazione NIS2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Richiesto</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Ricevuto</fullName>
            </value>
            <value>
                <fullName>In revisione</fullName>
            </value>
            <value>
                <fullName>Approvato</fullName>
            </value>
            <value>
                <fullName>Approvato con remediation</fullName>
            </value>
            <value>
                <fullName>Respinto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>