force-app/main/default/objects/Account/fields/NIS2_Assessment_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Assessment_Valid_Until__c</fullName>
    <label>Valido fino al</label>
    <type>Date</type>
</CustomField>