force-app/main/default/objects/Account/fields/NIS2_Category_explanation__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Category_explanation__c</fullName>
    <label>Motivazione categoria</label>
    <type>TextArea</type>
</CustomField>