force-app/main/default/objects/Account/fields/NIS2_Escalation_Channel__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Escalation_Channel__c</fullName>
    <label>Canale / modalità escalation</label>
    <type>TextArea</type>
</CustomField>