force-app/main/default/objects/Account/fields/NIS2_Incident_Contact_Primary__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Incident_Contact_Primary__c</fullName>
    <label>Contatto primario notifica incidenti</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Incident Contact</relationshipLabel>
    <relationshipName>PrimaryIncidentContact</relationshipName>
</CustomField>