force-app/main/default/objects/Account/fields/NIS2_Incident_Contact_Secondary__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Incident_Contact_Secondary__c</fullName>
    <label>Contatto secondario / escalation</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Secondary Incident Contact</relationshipLabel>
    <relationshipName>SecondaryIncidentContact</relationshipName>
</CustomField>