force-app/main/default/objects/Account/fields/NIS2_Notes__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Notes__c</fullName>
    <label>Note NIS2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>