force-app/main/default/objects/Account/fields/NIS2_Questionnaire_Date__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Questionnaire_Date__c</fullName>
    <label>Data compilazione questionario NIS2</label>
    <type>Date</type>
</CustomField>