force-app/main/default/objects/Account/fields/NIS2_Questionnaire_Version__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Questionnaire_Version__c</fullName>
    <label>Versione questionario NIS2</label>
    <type>Text</type>
    <length>50</length>
</CustomField>