force-app/main/default/objects/Account/fields/NIS2_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>NIS2_Risk_Rating__c</fullName>
    <label>Rating rischio NIS2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basso</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Critico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>