force-app/main/default/objects/Account/fields/NIS2Docs_Punto_di_Contatto__c.field-meta.xml
<CustomField>
    <fullName>NIS2Docs_Punto_di_Contatto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Docs Punto di Contatto</label>
    <referenceTo>Contenitore_File__c</referenceTo>
    <relationshipLabel>Accounts (Punto di Contatto)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>