force-app/main/default/objects/Account/fields/NIS2Docs_Referente_CSIRT__c.field-meta.xml
<CustomField>
    <fullName>NIS2Docs_Referente_CSIRT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Docs Referente CSIRT</label>
    <referenceTo>Contenitore_File__c</referenceTo>
    <relationshipLabel>Accounts (Docs Referente CSIRT)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>