force-app/main/default/objects/Account/fields/NIS2Docs_Storyboard_Organization__c.field-meta.xml
<CustomField>
    <fullName>NIS2Docs_Storyboard_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Docs Storyboard Organization</label>
    <referenceTo>Contenitore_File__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>