force-app/main/default/objects/Account/fields/NIS_Category__c.field-meta.xml
<CustomField>
    <fullName>NIS_Category__c</fullName>
    <label>Categoria NIS2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essential</fullName>
            </value>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>ToAssess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>