force-app/main/default/objects/Account/fields/Point_of_Contact_User__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description></description>
    <label>Referente PoC (Utente)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Referente PoC</relationshipLabel>
    <relationshipName>Point_of_Contact_User</relationshipName>
    <type>Lookup</type>
</CustomField>