force-app/main/default/objects/Account/recordTypes/Azienda.recordType-meta.xml
<RecordType>
    <fullName>Azienda</fullName>
    <active>true</active>
    <description>Record Type per aziende correlate all&apos;Ente NIS2</description>
    <label>Azienda</label>
</RecordType>