force-app/main/default/objects/Account/recordTypes/NIS2_Entity.recordType-meta.xml
<RecordType>
    <fullName>NIS2_Entity</fullName>
    <label>Ente NIS2</label>
    <description>Record Type per profilo Ente NIS2</description>
    <active>true</active>
</RecordType>